[gd_scene load_steps=3 format=3 uid="uid://dm7i12sudllfa"]

[ext_resource type="Script" path="res://scenes/objects/old_plane.gd" id="1_etgmd"]
[ext_resource type="Texture2D" uid="uid://b1jijqlrm8whg" path="res://graphics/objects/main_scene/old_plane.png" id="1_vp8i6"]

[node name="OldPlane" type="StaticBody2D"]
texture_filter = 1
scale = Vector2(2, 2)
collision_layer = 2
collision_mask = 3
input_pickable = true
script = ExtResource("1_etgmd")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-269, -47, -263, -42, -251, -45, -193, -71, -188, -66, -168, -53, -153, -44, -140, -37, -125, -30, -114, -24, -105, -18, -96, -12, -82, -6, -72, 0, -60, 7, -54, 11, -54, 11, -50, 23, -56, 32, -70, 39, -89, 47, -98, 55, -110, 63, -118, 70, -127, 79, -134, 86, -138, 91, -141, 93, -146, 96, -150, 101, -163, 107, -166, 112, -175, 122, -184, 130, -191, 135, -192, 139, -185, 143, -176, 147, -166, 148, -152, 146, -140, 137, -124, 126, -108, 118, -91, 110, -78, 108, -68, 114, -57, 127, -34, 142, -12, 151, 6, 154, 15, 150, 18, 137, 10, 124, 0, 114, -13, 96, -16, 82, 15, 68, 33, 66, 60, 70, 69, 74, 77, 78, 80, 80, 109, 97, 126, 108, 161, 120, 168, 130, 192, 136, 205, 131, 216, 110, 211, 88, 199, 74, 170, 52, 154, 29, 138, 9, 134, -4, 134, -13, 129, -20, 116, -27, 96, -28, 91, -33, 96, -44, 101, -62, 102, -87, 103, -105, 112, -116, 110, -124, 116, -130, 104, -137, 82, -142, 56, -127, 44, -116, 35, -107, -3, -81, -23, -71, -36, -68, -55, -73, -73, -77, -92, -83, -111, -89, -124, -93, -138, -97, -141, -99, -126, -108, -114, -116, -117, -121, -131, -123, -137, -122, -157, -109, -167, -106, -172, -103, -176, -105, -183, -114, -190, -125, -198, -135, -208, -148, -217, -156, -223, -160, -228, -164, -234, -166, -238, -161, -236, -147, -222, -128, -214, -116, -211, -106, -213, -103, -220, -100, -224, -97, -224, -91, -219, -86, -218, -84, -223, -79, -232, -75, -237, -71, -247, -66, -257, -59, -260, -56, -265, -52, -267, -51)

[node name="OldPlaneSprite" type="Sprite2D" parent="."]
position = Vector2(-23, -3)
texture = ExtResource("1_vp8i6")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
